@@ -535,11 +535,7 @@ int gsm_sim_cmd_get_msisdn_sm(struct iso_iec_7816_device *device, int init)
 		case MACRO_GET_MSISDN_STATE_CHECK_READ_RECORD_6F40:
 			if ((device->command.sw1 & 0x90) == 0x90) {
 				start = device->command.length_rd - 14;
-				if (device->command.data_rd[start] == 0xff) {
-					device->msisdn_len = 0;
-					device->msisdn[0] = '\0';
-					rc = 0;
-				} else if (device->command.data_rd[start] <= 11) {
+				if (device->command.data_rd[start] <= 11) {
 					end = start + device->command.data_rd[start] + 1;
 					start++;
 					device->msisdn_len = 0;
@@ -567,9 +563,12 @@ int gsm_sim_cmd_get_msisdn_sm(struct iso_iec_7816_device *device, int init)
 						}
 					}
 					device->msisdn_len = strlen(device->msisdn);
-					rc = 0;
+				} else {
+					device->msisdn_len = 0;
+					device->msisdn[0] = '\0';
 				}
 			}
+			rc = 0;
 			device->macro_state = MACRO_GET_MSISDN_STATE_DONE;
 			break;
 		default:
