@@ -1,3 +1,5 @@
+2014-02-04
+	1. Add option to configure watchdog timer.
 2014-01-11
 	1. Add IMSI read procedure.
 	2. MSISDN length limited to 10 + 1 octet.
